# fitnesstrax

./: .gitignore  Cargo.toml  formats.rs  readme.md  shell.nix
.circleci/: config.yml
fitnesstrax-lib/: Cargo.toml
fitnesstrax-lib/src/: lib.rs
fitnesstrax-lib/src/types/: timedistance.rs
share/: com.luminescent-dreams.fitnesstrax.gschema.xml
share/glib-2.0/schemas/: gschemas.compiled
src/: config.rs  context.rs  conversions.rs  errors.rs  main.rs  range.rs  settings.rs
src/components/: about.rs  basics.rs  date_selector.rs  day.rs  history.rs  main_window.rs  mod.rs  preferences.rs  range_selector.rs  rep_duration.rs  set_rep.rs  settings.rs  steps.rs  swappable.rs  time_distance.rs  time_distance_row.rs  weight.rs
src/components/basics/: container.rs  date.rs  distance.rs  dropmenu.rs  duration.rs  labeled_widget.rs  mod.rs  text_entry.rs  time.rs
src/formats/: duration.rs  hours_minutes.rs  mod.rs
src/i18n/: text.rs  units.rs
