[package]
name = "fitnesstrax"
authors = ["Savanni D'Gerinel <savanni@luminescent-dreams.com>"]
edition = "2018"
version = "0.1.0"
description = "Fitness tracking on your own computer"
license = "BSD-3-Clause"
homepage = "https://github.com/luminescent-dreams/fitnesstrax"
repository = "https://github.com/luminescent-dreams/fitnesstrax"
categories = ["health-and-fitness"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "shared/",
    "readme.md",
    "LICENSE",
    "CODE_OF_CONDUCT.md",
]

[dependencies]
chrono-tz = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
dimensioned = "0.7.0"
emseries = "0.5.0"
fitnesstrax-lib = "0.1.0"
fluent = "0.9.1"
gio = { version = "", features = ["v2_44"] }
glib = "0.9.0"
gtk = { version = "0.8.0", features = ["v3_16"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_yaml = "*"
tzdata = "0.4.1"
unic-langid = "0.7.1"

[[bin]]
name = "fitnesstrax-gtk"
path = "src/main.rs"
