[package]
name = "fitnesstrax"
authors = ["Savanni D'Gerinel <savanni@luminescent-dreams.com>"]
edition = "2018"
version = "0.1.0-pre"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.4", features = ["serde"] }
dimensioned = "0.7.0"
emseries = "0.5.0"
# emseries = { path = "../../emseries" }
serde = "1"
serde_derive = "1"
serde_json = "1.0"
