[package]
name = "fitnesstrax-lib"
authors = ["Savanni D'Gerinel <savanni@luminescent-dreams.com>"]
edition = "2018"
version = "0.1.0"
description = "Library for managing fitness time series data"
license = "BSD-3-Clause"
homepage = "https://github.com/luminescent-dreams/fitnesstrax"
repository = "https://github.com/luminescent-dreams/fitnesstrax"
categories = ["data-structures", "health-and-fitness"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.4", features = ["serde"] }
dimensioned = "0.7.0"
emseries = "0.5.0"
# emseries = { path = "../../emseries" }
serde = "1"
serde_derive = "1"
serde_json = "1.0"
